# yt_karaoke_search

./: .coverage  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  DISCOGS_FIXES_SUMMARY.md  DISCOGS_INTEGRATION.md  FINAL_CODE_QUALITY_REPORT.md  FINAL_TEST_FIX_SUMMARY.md  FINAL_TEST_STATUS.md  LINTING_REPORT.md  MULTI_PASS_GUIDE.md  PYLANCE_FIXES.md  README.md  SEARCH_QUALITY_IMPROVEMENTS.md  TESTS_READY.md  TEST_FIXES_COMPLETE.md  TEST_FIXES_SUMMARY.md  TEST_FIX_SUMMARY.md  TEST_ISSUES_SUMMARY.md  analysis_report.md  analyze_database_swapping.py  analyze_db.py  analyze_db_improvements.py  analyze_improvements.py  channel_analysis.py  check_schema.py  check_specific_records.py  compare_databases.py  config.yaml  coverage.xml  database_analysis.json  database_analysis_report.md  db_optimization.py  debug_channel_patterns.py  debug_extraction.py  detailed_db_analysis.py  discogs_prototype.py  discogs_rollout.py  evaluation_final.md  evaluation_run3.md  (+48 more)
collector/: __init__.py  advanced_parser.py  channel_formats.py  cli.py  config.py  data_transformer.py  db.py  db_optimized.py  discogs_cli.py  discogs_monitor.py  enhanced_search.py  main.py  multi_pass_controller.py  multi_pass_integration_example.py  processor.py  search.py  search_engine.py  utils.py  validation_corrector.py
docs/: critical_bug_fix.md  discogs_improvements_final.md
karaoke_video_collector/: __init__.py
karaoke_video_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
migrations/: 002_updated_at_trigger.sql  003_featured_artists_and_ratios.sql  (+4 more)
(+89 files in other folders)
